tofu/aws/ec2.tf
locals {
  host_settings = fileset(".", "../outputs/hosts.json")
}

# -----
# Keys
# -----
resource "tls_private_key" "ssh_key" {
  algorithm = "ED25519"
}

# Synchronize the SSH private key to a local file that 
# the "nixos" module can properly use it later
resource "local_sensitive_file" "ssh_private_key" {
  filename = "${path.module}/outputs/id_ed25519"
  content  = tls_private_key.ssh_key.private_key_openssh
}

resource "local_file" "ssh_public_key" {
  filename = "${path.module}/outputs/id_ed25519.pub"
  content  = tls_private_key.ssh_key.public_key_openssh
}

resource "aws_key_pair" "ssh_key" {
  public_key = tls_private_key.ssh_key.public_key_openssh
}

# EC2
resource "aws_instance" "vm" {
  ami                         = data.aws_ami.nixos_amd.id
  key_name                    = aws_key_pair.ssh_key.key_name
  instance_type               = var.instance_type
  associate_public_ip_address = false
  subnet_id                   = aws_subnet.public.id
  vpc_security_group_ids      = [aws_security_group.vm.id]

  user_data = <<-EOF
    #!/usr/bin/env bash
    (umask 377; echo '${tls_private_key.ssh_key.private_key_openssh}' > /var/lib/secrets/id_ed25519)

    # Enable Flakes as soon as as possible
    mkdir -p /etc/nix
    cat > /etc/nix/nix.conf << EOL
    experimental-features = nix-command flakes
    EOL

    systemctl restart nix-daemon
    sleep 30
  EOF

  root_block_device {
    volume_size = 100
    volume_type = "gp3"
  }

  tags = {
    Category = "vm"
    Project  = "trashcan"
  }
}

# Elastic IP
resource "aws_eip" "eip" {
  domain     = "vpc"
  instance   = aws_instance.vm.id
  depends_on = [aws_internet_gateway.main]

  tags = {
    Category = "ip"
    Project  = "trashcan"
  }
}

# This ensures that the instance is reachable via `ssh` before we deploy NixOS
resource "null_resource" "wait" {
  provisioner "remote-exec" {
    connection {
      host        = aws_eip.eip.public_ip
      private_key = tls_private_key.ssh_key.private_key_openssh
    }

    inline = [":"] # Do nothing; we're just testing SSH connectivity
  }
}

# Now install the first bootstrap flake
module "nixos_anywhere" {
  source                 = "github.com/nix-community/nixos-anywhere//terraform/all-in-one"
  nixos_system_attr      = "${var.flake_path}#nixosConfigurations.${var.flake_system}.config.system.build.toplevel"
  nixos_partitioner_attr = "${var.flake_path}#nixosConfigurations.${var.flake_system}.config.system.build.diskoScript"
  deployment_ssh_key     = tls_private_key.ssh_key.private_key_openssh
  instance_id            = aws_eip.eip.public_ip
  target_host            = aws_eip.eip.public_ip

  # Useful on first time setups and debugging
  debug_logging = true

  depends_on = [
    aws_instance.vm,
    null_resource.wait
  ]
}

# module "deploy" {
#   source = "github.com/nix-community/nixos-anywhere//terraform/all-in-one"
#   
#   nixos_system_attr = ".#nixosConfigurations.${var.flake_system}.config.system.build.toplevel"
#   nixos_partitioner_attr = ".#nixosConfigurations.hetzner-cloud.config.system.build.disko"
#   target_host = hcloud_server.nixos.ipv4_address
#   instance_id = hcloud_server.nixos.id
#   debug_logging = true
#
#   extra_files_script = <<-EOT
#     #!/usr/bin/env bash
#     set -euo pipefail
#     
#     mkdir -p etc/ssh/authorized_keys.d
#     printf "%s" "${var.sshKeys}" > etc/ssh/authorized_keys.d/root
#     printf "%s" "${var.sshKeys}" > etc/ssh/authorized_keys.d/patrick
#     chmod 755 etc/ssh/authorized_keys.d
#     chmod 600 etc/ssh/authorized_keys.d/root
#     chmod 600 etc/ssh/authorized_keys.d/patrick
#   EOT
#
#   depends_on = [aws_instance.vm]
# }
